fix: fixed spacing and size issues

--- a/styles.css
+++ b/styles.css
@@ -2,34 +2,34 @@ body
 {
     font-size: 18px;
     scroll-behavior: smooth;
-    color: var(--black-text);
+    color: #000;
     font-family: 'Roboto', sans-serif;
 }
 
-.container
-{
+.limiter {
     max-width: 590px;    
 }
 
-.nav_links
-{
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 10px;
+.nav_link {
+    font-family: Roboto, 'sans-serif';
+    font-weight: 400;
+    font-size: 12px;
     line-height: 12px;
-    /* identical to box height */
-    
     text-transform: uppercase;
-    
-    color: #676767;  
-    padding-top: 15px;  
+    color: #676767;
+    padding: 15px 0 0 20px;
+    text-decoration: none;
 }
 
-.nav_links a{
-    text-decoration: none;
+.nav_link:hover,
+.nav_link:active {
     color: #676767;
-    padding-left: 10px;
+    text-decoration: underline;
+}
+
+.header_row {
+    border-bottom: 1px solid #EBEBEB;
+    padding: 10px 0;
 }
 
 .main_img
@@ -39,32 +39,42 @@ body
     justify-content: end; 
 }
 
-.main_text
-{
-    font-size: 30px;
+.main_text {
+    font-size: 28px;
     line-height: 41px;
-    /* or 137% */
     text-align: center;
-    color: #000000;    
+    color: #000000;
+    max-width: 460px;
 }
 
-.align
-{
-text-align: center;    
-}
-
-.reset_btn
-{
+.reset_btn {
     font-weight: 500;
     font-size: 15px;
     line-height: 18px;
-    padding: 20px;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding: 18px 60px;
     background-color: #06415D;
     color: #FFFFFF;
     border-radius: 4px;
-    text-decoration: none;     
+    text-decoration: none;
+    transition: all 0.2s;
+}
+
+.reset_btn:hover,
+.reset_btn:active {
+    background-color: #155878;
+    color: #FFFFFF;
+}
+
+.email-text {
+    font-size: 15px;
+    line-height: 22.5px;
+    max-width: 80%;
+    margin-left: 10%;
+}
+
+.footer-separator {
+    display: inline-block;
+    border-bottom: 1px solid #EBEBEB;
 }
 
 .kindly_ignore
@@ -88,11 +98,9 @@ text-align: center;
     font-size: 15px;
     line-height: 18px;
     padding: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
     color: #06415D;
     border-radius: 4px; 
-    border: 2.5px solid #06415D; 
+    border: 2px solid #06415D;
     text-decoration: none;   
 }
 
@@ -208,25 +216,9 @@ margin-bottom: 0.1rem;
     border-bottom: 0.5px solid #EBEBEB;   
 }
 
-.total_row
-{
+.total_row {
     font-size: 15px;
-    line-height: 30px;    
-}
-
-
-.reset_btn
-{
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 18px;
-    padding: 20px;
-    padding-left: 60px;
-    padding-right: 60px;
-    background-color: #06415D;
-    color: #FFFFFF;
-    border-radius: 4px;
-    text-decoration: none;     
+    line-height: 30px;
 }
 
 .main_img3
@@ -234,7 +226,6 @@ margin-bottom: 0.1rem;
     width: 203px;
     height: 182px;    
 }
-
 
 /*--Created Page--*/
 .created_row
